movie card on mobile view fixed

--- a/src/components/homepage/homepage.scss
+++ b/src/components/homepage/homepage.scss
@@ -53,6 +53,8 @@
         max-height: 30rem;
         @include mobile() {
           width: 100% !important;
+          min-height: 33rem;
+          max-height: 33rem;
         }
         .ant-card-cover {
           img {
